<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="46dp"
	    android:background="@color/darktheme_header_blue"
	    android:gravity="center_vertical"
	    android:orientation="horizontal" 
	    android:layout_marginBottom="10dp">
    <TextView
        android:id="@+id/txtTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/app_name"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="@color/darktheme_white" />
	</LinearLayout>
	<Button 
	    android:id="@+id/main_button_next"
	    android:layout_height="160dp"
	    style="@style/button_style"
    	android:text="@string/to_lists">
	</Button>

	<TextView
	    android:id="@+id/txtMainDontForget"
	    android:layout_marginLeft="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/items"
	    android:textColor="@color/darktheme_faded_grey"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<ScrollView
	    android:id="@+id/scrollViewMain"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	</ScrollView>

</LinearLayout>