<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginTop="64dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/dialog_drawable"
    android:padding="4dp"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/txtConfirmRemoveMessage"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/remove_warning"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal" 
        android:layout_gravity="center_vertical">


        <Button
            android:id="@+id/btnCancelRemove"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />


        <Button
            android:id="@+id/btnOKRemove"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/darktheme_warning" />

    </LinearLayout>

</LinearLayout>